# jat-slides

./: .gitignore  main.ipynb  pyproject.toml  temp.ipynb
config/: mun.toml  zone.toml
jat_slides/: definitions.py  managers.py  partitions.py  resources.py
jat_slides/assets/: built.py  cells.py  income.py  jobs.py  muns.py  slides.py
jat_slides/assets/agebs/: __init__.py  base.py
jat_slides/assets/maps/: built.py  common.py  income.py  jobs.py  population_grid.py
jat_slides/assets/stats/: built_after_2000.py  built_area.py  built_urban_area.py  jobs.py  lost_pop_after_2000.py  population.py
jat_slides/defs/: managers.py  partitions.py  resources.py
jat_slides/defs/assets/: agebs.py  built.py  cells.py  income.py  jobs.py  muns.py  slides.py
jat_slides/defs/assets/maps/: built.py  common.py  income.py  jobs.py  population_grid.py
jat_slides/defs/assets/stats/: built_after_2000.py  built_area.py  built_urban_area.py  jobs.py  lost_pop_after_2000.py  population.py
