[project]
name = "jat-slides"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.12.3",
    "dagster-dg-cli>=1.12.3",
    "dagster-webserver>=1.12.3",
    "geopandas>=1.1.1",
    "ipykernel<7",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250926",
    "rasterio>=1.4.3",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "types-geopandas>=1.1.1.20250829",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D", "PLR2004"]

[tool.basedpyright]
typeCheckingMode = "standard"
ignore = ["**/*.ipynb"]

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "jat_slides"
registry_modules = [
    "jat_slides.definitions",
]
